Fixed media queries overlap

--- a/css/main.css
+++ b/css/main.css
@@ -1542,7 +1542,7 @@ footer .copyright {
 
 /* end footer */
 /* media queries */
-@media(max-width: 1280px) {
+@media screen and (max-width: 1280px) {
     .our-process .bullet-2 {
         left: 39.5%;
     }
@@ -1581,7 +1581,7 @@ footer .copyright {
     }
 }
 
-@media(max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .top-menu {
         overflow: visible;
     }
@@ -1876,7 +1876,7 @@ footer .copyright {
     }
 }
 
-@media(min-width: 1024px) {
+@media screen and (min-width: 1024.1px) {
     .timeline-path-sm {
         display: none;
     }
@@ -1914,7 +1914,7 @@ footer .copyright {
     /* End Our mission | About us page */
 }
 
-@media (min-width: 1366px) {
+@media screen and (min-width: 1366px) {
     .our-process .bullet-2 {
         left: 39.5%;
     }
@@ -1941,13 +1941,13 @@ footer .copyright {
     }
 }
 
-@media (max-width: 1440px) {
+@media screen and (max-width: 1440px) {
     .artwork-2-2 {
         display: none;
     }
 }
 
-@media (min-width: 1440px) {
+@media screen and (min-width: 1440.1px) {
     header .banner img.artwork-1 {
         top: 215px;
         height: 469px;
@@ -2010,7 +2010,7 @@ footer .copyright {
     /* End Our team | About us page */
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768.1px) {
 
     /* Start Selection process us | companies page */
     .our-process.selection-process .timeline {
@@ -2020,7 +2020,7 @@ footer .copyright {
     /* End Selection process us | companies page */
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768.1px) and (max-width: 1024px) {
     .our-process .start-artwork {
         width: 203px;
     }
@@ -2216,7 +2216,7 @@ footer .copyright {
     }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .container {
         padding-left: 16px;
         padding-right: 16px;
@@ -2428,6 +2428,14 @@ footer .copyright {
         display: none;
     }
 
+    .how-it-works.companies-how-it-works {
+        padding-top: 40px;
+    }
+
+    .how-it-works.companies-how-it-works .container {
+        padding: 40px;
+    }
+
     /* End Selection process us | companies page */
     .our-process .start-artwork {
         width: 140px;
@@ -2502,7 +2510,7 @@ footer .copyright {
     /* End footer */
 }
 
-@media screen and (min-width: 576px) and (max-width: 768px) {
+@media screen and (min-width: 576.1px) and (max-width: 768px) {
     .our-team .row .member {
         width: 40%;
         margin: 5%;
@@ -2510,7 +2518,7 @@ footer .copyright {
     }
 }
 
-@media (max-width: 576px) {
+@media screen and (max-width: 576px) {
 
     header .banner input,
     header .banner button {
@@ -2687,7 +2695,7 @@ footer .copyright {
     /* End contact us | About us */
 }
 
-@media (max-width: 442px) {
+@media screen and (max-width: 442px) {
     header .banner h1 {
         font-size: 44px;
         line-height: 54px;
@@ -2835,7 +2843,7 @@ footer .copyright {
     }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024.1px) and (max-width: 1440px) {
     .our-process {
         height: 2246px;
     }
@@ -2869,7 +2877,7 @@ footer .copyright {
     }
 }
 
-@media (min-width: 1440px) {
+@media screen and (min-width: 1440px) {
     header .banner p {
         width: 425px;
     }
